--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/battcn?characterEncoding=UTF-8
+database.url=jdbc:mysql://localhost:3306/btwork?characterEncoding=UTF-8
 database.username=root
 database.password=root
 
